--- a/code/diana-pavel/whackamole/index-FINISHED.html
+++ b/code/diana-pavel/whackamole/index-FINISHED.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Whack A Mole!</title>
+  <title>Flash's Whack A Mole!</title>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
+  <h1>Flash's Whack-a-mole! <span class="score">0</span></h1>
   <button onClick="startGame()">Start!</button>
 
   <div class="game">
@@ -57,7 +57,7 @@
   }
 
   function peep() {
-    const time = randomTime(200, 1000);
+    const time = randomTime(800, 1000);
     const hole = randomHole(holes);
     hole.classList.add('up');
     setTimeout(() => {
